# integrify-docs-python

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  fetch_integrations.sh  integrations.txt  netlify.toml  pyproject.toml
docs/az/: mkdocs.yml
docs/az/docs/: index.md
docs/az/docs/integrations/: index.md
docs/az/docs/js/: custom.js
docs/az/docs/resources/: code-architecture.md  contributing.md  index.md
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/integrations/: index.md
docs/en/docs/resources/: code-architecture.md  contributing.md  index.md
src/: plugin.py
src/plugins/: generate_nav.py
